--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
+# *.spec - Commented out to allow EmuRomManager.spec for GitHub Actions
 
 # Installer logs
 pip-log.txt
