--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,11 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
     
+    - name: Initialize ACORN submodule
+      run: |
+        git submodule update --init --recursive
+        ls -la ACORN/
+    
     - name: Build with PyInstaller (Linux)
       if: matrix.os == 'ubuntu-latest'
       run: |
