--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
     
     steps:
     - uses: actions/checkout@v4
@@ -31,11 +32,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
-    
-    - name: Initialize ACORN submodule
-      run: |
-        git submodule update --init --recursive
-        ls -la ACORN/
     
     - name: Build with PyInstaller (Linux)
       if: matrix.os == 'ubuntu-latest'
