Add bash shell specification to ACORN debug step in GitHub Actions workflow
- Add shell: bash to Debug and ensure ACORN exists step
- Ensures consistent shell behavior across all platforms (Linux, Windows, macOS)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
         pip install pyinstaller
     
     - name: Debug and ensure ACORN exists
+      shell: bash
       run: |
         ls -la
         echo "=== Checking if ACORN exists ==="
