Add contents write permission and disable fail_on_unmatched_files for release creation
- Add permissions block with contents: write to allow release creation
- Add fail_on_unmatched_files: false to release step to handle missing platform artifacts
- Remove dist/EmuRomManager.app from release files list

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build Executables
 
+permissions:
+  contents: write
+
 on:
   push:
     branches: [ main, master ]
@@ -109,6 +112,6 @@ jobs:
         files: |
           dist/EmuRomManager
           dist/EmuRomManager.exe
-          dist/EmuRomManager.app
+        fail_on_unmatched_files: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
