--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Build with PyInstaller (macOS)
       if: matrix.os == 'macos-latest'
       run: |
-        pyinstaller --clean --name EmuRomManager-macos EmuRomManager.spec
+        pyinstaller --clean EmuRomManager.spec
         mv dist/EmuRomManager dist/EmuRomManager-macos
     
     - name: Upload Linux artifact
