Update macOS executable filename in release notes to match renamed artifact
- Change macOS download reference from EmuRomManager to EmuRomManager-macos
- Aligns release notes with platform-specific naming convention introduced in previous commits

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
           Choose the appropriate download for your platform:
           
           - **Windows**: `EmuRomManager.exe` - Windows executable
-          - **macOS**: `EmuRomManager` - macOS executable (Apple Silicon/Intel)
+          - **macOS**: `EmuRomManager-macos` - macOS executable (Apple Silicon/Intel)
           - **Linux**: `EmuRomManager` - Linux executable
           
           ### Installation
