Add virtual environment to Linux build workflow and update Python commands
- Create Python virtual environment in Install dependencies step
- Activate venv before installing dependencies and building
- Change pip3/python3 commands to pip/python after venv activation
- Ensures isolated dependency management for Linux builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,9 +113,11 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python3 -m pip install --upgrade pip
-        pip3 install -r requirements.txt
-        pip3 install pyinstaller
+        python3 -m venv venv
+        source venv/bin/activate
+        pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller
     
     - name: Debug and ensure ACORN exists
       run: |
@@ -129,7 +131,8 @@ jobs:
     
     - name: Build with PyInstaller
       run: |
-        python3 -m PyInstaller --clean EmuRomManager.spec
+        source venv/bin/activate
+        python -m PyInstaller --clean EmuRomManager.spec
     
     - name: Upload Linux artifact
       uses: actions/upload-artifact@v4
