--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,9 +115,9 @@ jobs:
       run: |
         python3 -m venv venv
         source venv/bin/activate
-        pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pyinstaller
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements.txt
+        python -m pip install pyinstaller
     
     - name: Debug and ensure ACORN exists
       run: |
