--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python3 -m venv venv
+        python -m venv venv
         source venv/bin/activate
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
