--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,11 +75,17 @@ jobs:
   build-linux:
     strategy:
       matrix:
-        distro: [ubuntu, fedora, arch]
+        include:
+          - distro: ubuntu
+            container: ubuntu:latest
+          - distro: fedora  
+            container: fedora:latest
+          - distro: arch
+            container: archlinux/archlinux:latest
         
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    container: ${{ matrix.distro }}:latest
+    container: ${{ matrix.container }}
     
     steps:
     - name: Install packages (Ubuntu)
