--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,6 +113,7 @@ jobs:
         python-version: '3.11'
     
     - name: Install dependencies
+      shell: bash
       run: |
         python -m venv venv
         source venv/bin/activate
@@ -131,6 +132,7 @@ jobs:
         ls -la ACORN/
     
     - name: Build with PyInstaller
+      shell: bash
       run: |
         source venv/bin/activate
         python -m PyInstaller --clean EmuRomManager.spec
