--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -160,6 +160,15 @@ jobs:
         echo "=== Directory structure ==="
         tree artifacts || find artifacts -type d
     
+    - name: Prepare Linux artifacts for release
+      run: |
+        # Copy Linux executables to root with proper names
+        cp artifacts/EmuRomManager-linux-ubuntu/EmuRomManager artifacts/EmuRomManager-linux-ubuntu
+        cp artifacts/EmuRomManager-linux-fedora/EmuRomManager artifacts/EmuRomManager-linux-fedora
+        cp artifacts/EmuRomManager-linux-arch/EmuRomManager artifacts/EmuRomManager-linux-arch
+        echo "=== Prepared files ==="
+        ls -la artifacts/
+    
     - name: Delete existing release
       run: |
         gh release delete ${{ github.ref_name }} --yes || true
@@ -198,7 +207,9 @@ jobs:
         files: |
           artifacts/EmuRomManager-windows/EmuRomManager.exe
           artifacts/EmuRomManager-macos/EmuRomManager-macos
-          artifacts/EmuRomManager-linux-*/EmuRomManager
+          artifacts/EmuRomManager-linux-ubuntu
+          artifacts/EmuRomManager-linux-fedora
+          artifacts/EmuRomManager-linux-arch
         fail_on_unmatched_files: false
         draft: false
         prerelease: false
